--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,2 @@
-@import "mixins", "global", "home", "about", "trading", "accounts", "footer";
+@import "mixins", "global", "home", "about", "trading", "accounts", "terms",
+  "footer";
