--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -211,6 +211,14 @@
     rgba(92, 74, 140, 0.394901) 60.2%,
     rgba(92, 74, 140, 0) 75.62%
   );
+  @include breakpoint-down(mobile) {
+    background: linear-gradient(
+      192.03deg,
+      #5c4a8c 5.31%,
+      rgba(92, 74, 140, 0.394901) 58.18%,
+      rgba(92, 74, 140, 0.35) 74.9%
+    );
+  }
   &__wrapper {
     position: relative;
     z-index: 10;
@@ -299,6 +307,9 @@
           font-weight: 500;
           color: #3e2b72;
         }
+        @include breakpoint-down(tab) {
+          font-size: 2.5rem;
+        }
         @include breakpoint-down(mobile) {
           font-size: 2.4rem;
         }
@@ -315,6 +326,24 @@
     &-line {
       @include breakpoint-down(mobile) {
         display: none;
+      }
+      .circle-1 {
+        left: 0;
+      }
+      .circle-3 {
+        right: 0;
+      }
+      .circle-2 {
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      &-circle {
+        width: 30px;
+        height: 30px;
+        background-color: #f4f4f1;
+        border-radius: 50%;
+        position: absolute;
+        bottom: -12px;
       }
       hr {
         border: 3px solid #f4f4f1;
